feat(items): load item assets on demand
